Minor icon alignment fix

--- a/asset/sass/_screen.scss
+++ b/asset/sass/_screen.scss
@@ -949,7 +949,7 @@ footer {
     text-align: center;
     padding: 0;
     width: 100%;
-    line-height: 1.25 * $base-line-height;
+    line-height: 1.5 * $base-line-height;
     text-indent: 0;
 }
 
